--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ header{
     text-align: center;
     height: 150px;
     background-color: #141a1a;
-    background-image: url(06%20assignment/bowl.jpg);
+    background-image: url(bowl.jpg);
     background-repeat:no-repeat;
     color: #ffff;
 }
